--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ body {
     margin-left: 6.25%;   
 
     padding-top: 0.5%;
+    padding-bottom: 0.5%;
     padding-left: 2.5%;
     padding-right: 2.5%;
 }
