--- a/style.css
+++ b/style.css
@@ -492,8 +492,9 @@ summary:hover {
     filter: drop-shadow(0 0 0.3em black);
 
     position: relative; 
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
@@ -502,8 +503,8 @@ summary:hover {
     cursor: pointer;
     
     box-shadow: 0 0 1em black;
-    box-sizing: border-box;
 }
+
 
 .gallery img:active {    
     /* Best fit as large as possible */
@@ -532,12 +533,5 @@ summary:hover {
 @media (max-width: 800px) {
     .gallery {
         grid-template-columns: repeat(2, auto);
-    }
-
-    .gallery img:hover {
-        transition: 0.3s;
-
-        transform: scale(110%);
-    }    
-    
+    } 
 }
