--- a/style.css
+++ b/style.css
@@ -664,3 +664,37 @@ summary:hover {
 .tech-icon:hover p {
     visibility: visible;
 }
+
+/* -------------------------------------------------- Project Descriptor -------------------------------------- */
+
+.tech-icon-bar {
+    display: flex; 
+    flex-direction: row; 
+
+    justify-content: space-evenly; 
+    align-content: space-around; 
+    gap:0.2em;
+}
+
+.project-keyword-list {
+    opacity: 0.5; 
+    padding-bottom: 0.5em;
+
+    /* grid-column: 2; */
+    grid-column: 1;
+
+}
+
+.project-keyword-list ~ details[open] {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+details[open] {
+    
+}
+
+.project-layout {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+}
