Added TimeGame to games page + screenshots to CampusWars

--- a/style.css
+++ b/style.css
@@ -832,3 +832,13 @@ summary:hover {
     margin: 0;
     border-radius: 0;
 }
+
+/* ------------------------------------------------- Generic sized same as Youtube ----------------------------------- */
+.sized-same-as-yt{
+    border-radius:2em; 
+
+    width: min(480px, 90vw); 
+    height: min(360px, 80vh);
+
+    overflow: scroll;
+}
