skill ratings now mobile friendly
float left/right tends to break easily

--- a/style.css
+++ b/style.css
@@ -388,10 +388,12 @@ ul li::before {
 }
 
 ul.list-no-style li::before{
-    opacity: 0%;
+    content: none;
+    margin: none;
 }
 ol.list-no-style li::before{
-    opacity: 0%;
+    content: none;
+    margin: none;
 }
 
 /* Ordered Lists */
